# s3-hooked

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: dev-image-ghcr.yml  ghcr.yml  release-ghcr.yml  tests.yml
proxy/: app.py  ciphers.py  conf.py  conftest.py  default_hooks.py  events.py  handlers.py  hooks.py  utils.py
proxy/tests/: test_encryption.py  test_hooks.py  test_proxy.py
